tests/positive/basic/print_err/input.ci
void main() {
    print("out\n");
    printErr("err\n");
}
