tests/negative/lexical/unterminated_block_comment/input.ci
/* unterminated
void main() {
    print("x\n");
}
